--- a/args-kata/package.json
+++ b/args-kata/package.json
@@ -1,3 +1,17 @@
 {
-    "type": "module"
+  "type": "module",
+  "name": "args-kata",
+  "description": "This Kata is presented in Robert C.. Martin’s book “Clean Code”, chapter 14.",
+  "version": "1.0.0",
+  "main": "main.js",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "jest": "^27.0.4"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "author": "",
+  "license": "ISC"
 }
