--- a/args-kata/javier/package.json
+++ b/args-kata/javier/package.json
@@ -4,9 +4,14 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "jest": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Javier Choque",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "jest": "^27.0.4"
+  },
+  "dependencies": {},
   "description": ""
 }
