--- a/args-kata/package.json
+++ b/args-kata/package.json
@@ -1,17 +1,16 @@
 {
-  "type": "module",
   "name": "args-kata",
-  "description": "This Kata is presented in Robert C.. Martin’s book “Clean Code”, chapter 14.",
   "version": "1.0.0",
+  "description": "",
   "main": "main.js",
-  "dependencies": {},
-  "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
-    "jest": "^27.0.4"
-  },
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "jest": "^27.0.4"
+  }
 }
