--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "jest": "^27.0.5"
   },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["json", "html"]
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest  --coverage"
   },
   "repository": {
     "type": "git",
