--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
-    "jest": "^27.0.5"
+    "jest": "^27.0.5",
+    "phaser": "^3.55.2"
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["json", "html"]
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
   },
   "scripts": {
     "test": "jest  --coverage"
