--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "- Learn basics for software development",
   "main": "main.js",
-  "dependencies": {},
+  "dependencies": {
+    "http-server": "^0.12.3"
+  },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "jest": "^27.0.5",
@@ -17,7 +19,8 @@
     ]
   },
   "scripts": {
-    "test": "jest  --coverage"
+    "test": "jest  --coverage",
+    "arkanoid": "http-server"
   },
   "repository": {
     "type": "git",
