--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "at14",
   "version": "1.0.0",
   "description": "- Learn basics for software development",
-  "main": "main.js",
+  "main": "index.js",
   "dependencies": {},
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
@@ -10,6 +10,7 @@
     "phaser": "^3.55.2"
   },
   "jest": {
+    "verbose": true, "setupFiles": [ "./dom.js" ],
     "collectCoverage": true,
     "coverageReporters": [
       "json",
