--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
-    "jest": "^27.0.5",
-    "phaser": "^3.55.2"
+    "canvas": "^2.8.0",
+    "install": "^0.13.0",
+    "jest": "^27.0.6"
   },
   "jest": {
     "verbose": true, "setupFiles": [ "./dom.js" ],
