--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "jest": "^27.0.6"
   },
   "jest": {
-    "verbose": true, "setupFiles": [ "./dom.js" ],
+    "verbose": true,
+    "setupFiles": [
+      "./dom.js"
+    ],
     "collectCoverage": true,
     "coverageReporters": [
       "json",
